--- a/style.css
+++ b/style.css
@@ -16,7 +16,11 @@
     display:block-inline;
     margin: 1px 0px 4px 0px;
 }  */
+.button-container {
+    margin-left: -42px;
+    margin-top: -18px;
 
+}
 .ratingButton:active {
     position:relative;
     top:1px;
@@ -47,8 +51,9 @@ width: 111.016px;
 
 .popup {
     position: absolute;
-    top: -210px;
+    top: -228px;
     left: 240;
+    right: 52px;
     margin: 100px auto;
     width: 220px;
     height: 140px;
@@ -67,12 +72,12 @@ width: 111.016px;
 }
 
 .notFoundPopup {
-    position: absolute;
-    top: -171px;
-    left: 120px;
+     top: -228px;
+    left: 240;
+    right: 52px;
     margin: 100px auto;
-    width: 210px;
-    height: 50px;
+    width: 220px;
+    height: 140px;
     background-color: #e5e5e5;
     border: 2px solid #D6D6D6;
     z-index: 100000000000000000;
@@ -101,7 +106,7 @@ width: 111.016px;
 .title {
     display: block;
     font-family: proximanova, "Helvetica Neue", Helvetica, Helvetica, Arial, sans-serif;;
-    font-size: 10px;
+    font-size: 14px;
     font-weight: 500;
     color: rgb(51, 51, 51);
     position: relative;
@@ -121,7 +126,7 @@ width: 111.016px;
     position: absolute;
     width: 105px;
     height: 20px;
-    top: 34px;
+    top: 40px;
     left: -6px;
 }
 
@@ -130,17 +135,17 @@ width: 111.016px;
     position: absolute;
     width: 105px;
     height: 20px;
-    top: 34px;
+    top: 40px;
     left: 115px; 
 }
 
 .would_take_again {
     display: block;
     position: absolute;
-    width: 70px;
+    width: 112px;
     height: 20px;
-    top: 60px;
-    left: 74px;
+    top: 80px;
+    left: 48px;
 }
 
 .numRatings {
@@ -149,12 +154,12 @@ width: 111.016px;
     height: 5px;
     position: absolute;
     font-family: proximanova, "Helvetica Neue", Helvetica, Helvetica, Arial, sans-serif;;
-    font-size: 10px;
+    font-size: 12px;
     color: rgb(51, 51, 51);
     text-align: center;
     text-transform: lowercase;
     text-decoration: underline;
-    top: 20px;
+    top: 22px;
     left: 14px;
     bottom: 10px;
 }
@@ -166,7 +171,8 @@ width: 111.016px;
 .idk {
     display: block;
     font-family: proximanova, "Helvetica Neue", Helvetica, Helvetica, Arial, sans-serif;;
-    font-size: 11px;
+    font-size: 12px;
+    font-weight: 1000;
     position: absolute;
     width: 190px;
     height: 25px;
