--- a/style.css
+++ b/style.css
@@ -49,6 +49,33 @@ white-space: nowrap;
 width: 111.016px;
 }
 
+.refreshButton {
+background-color: rgb(209, 209, 209);
+border: none;
+color: rgb(51, 51, 51);
+cursor: pointer;
+display: block-inline;
+font-family: proximanova, "Helvetica Neue", Helvetica, Helvetica, Arial, sans-serif;
+font-size: 12px;
+font-weight: 300;
+height: 20px;
+line-height: 12px;
+margin-top: 10px;
+padding-bottom: 16px;
+padding-left: 10px;
+padding-right: 10px;
+padding-top: 4px;
+position: relative;
+text-align: center;
+vertical-align: baseline;
+white-space: nowrap;
+width: 111.016px;
+}
+
+#processing {
+    width: 90px;
+}
+
 .popup {
     position: absolute;
     top: -228px;
